[package]
name = "projects"
version = "0.1.0"
authors = ["Al Madireddy <al.madireddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dialoguer = "0.5.0"
yaml-rust = "0.4.3"
dirs = "2.0.2"
colored = "1.9.3"

